# personal-betting-app

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backups/: flaskr_backup_2024-10-20.sqlite
betting_app/: __init__.py  backups.py  bets.py  db.py  ev.py  ev_calc.py  graph.py  schema.sql
betting_app/static/: bets.js  ev.js  graph.js  style.css
betting_app/templates/: base.html  bets.html  ev.html  graph.html
tests/: betting_app_backup_2024-12-13.sqlite  conftest.py  data.sql  test_backup.py  test_bets.py  test_db.py  test_ev.py  test_ev_calc.py  test_factory.py  test_graph.py
