[project]
name = "betting_app"
version = "0.0.1"
authors = [
    { name="Kieran Aston", email="kieranaston1@gmail.com" },
]
description = "A Flask-based EV calculator and bet tracker."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
dependencies = [
    "blinker==1.8.2",
    "click==8.1.7",
    "Flask==3.0.3",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==3.0.1",
    "Werkzeug==3.0.4",
]

[project.urls]
Homepage = "https://github.com/kieranaston/personal-betting-app"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"